--- a/index.html
+++ b/index.html
@@ -6,52 +6,53 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1 id="title"></h1>
-        <br>
-        <div id="outerbox">
-            <table border="1" id="table">
-                <tr>
-                    <th colspan="4">
-                        Yuvi's Calculator
-                    </th>
-                </tr>
-                <tr>
-                    <td colspan="4" id="display">
-                    </td>
-                </tr>
-                <tr>
-                    <td class="button-designs" data-value="AC">AC</td>
-                    <td class="button-designs" data-value="">+/-</td>
-                    <td class="button-designs" data-value="%">%</td>
-                    <td class="button-designs lc" data-value="/">/</td>
-                </tr>
-                <tr>
-                    <td class="button-designs" data-value="7" id="minato">7</td>
-                    <td class="button-designs" data-value="8" id="iruka">8</td>
-                    <td class="button-designs"data-value="9" id="kakashi">9</td>
-                    <td class="button-designs lc" data-value="*">*</td>
-                </tr>
-                <tr>
-                    <td class="button-designs" data-value="4" id="mightguy">4</td>
-                    <td class="button-designs" data-value="5" id="gaara">5</td>
-                    <td class="button-designs" data-value="6" id="rocklee">6</td>
-                    <td class="button-designs lc" data-value="-" data-value="-">-</td>
-                </tr>
-                <tr>
-                    <td class="button-designs" data-value="1" id="hasirama">1</td>
-                    <td class="button-designs" data-value="2" id="jiraya">2</td>
-                    <td class="button-designs" data-value="3" id="madara">3</td>
-                    <td class="button-designs lc" data-value="+">+</td>
-                </tr>
-                <tr>
-                    <td colspan="2" class="button-designs" data-value="0" id="sasukenaruto">0</td>
-                    <td class="button-designs" data-value="." data-value="." id="sakura">.</td>
-                    <td class="button-designs lc" data-value="=">=</td>
-                </tr>
-            </table>
-            <div><h3>Site Designed By Yuvaraja</h3></div>
-            <div id="cp">Copyright © 2022 - 2023 TrendSetters Enterprise. All rights reserved.</div>
-        </div>
+        <div>
+            <h1 id="title"></h1>
+            <br>
+            <div id="outerbox">
+                <table border="1" id="table">
+                    <tr>
+                        <th colspan="4">
+                            Yuvi's Calculator
+                        </th>
+                    </tr>
+                    <tr>
+                        <td colspan="4" id="display">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="button-designs" data-value="AC">AC</td>
+                        <td class="button-designs" data-value="">+/-</td>
+                        <td class="button-designs" data-value="%">%</td>
+                        <td class="button-designs lc" data-value="/">/</td>
+                    </tr>
+                    <tr>
+                        <td class="button-designs" data-value="7" id="minato">7</td>
+                        <td class="button-designs" data-value="8" id="iruka">8</td>
+                        <td class="button-designs"data-value="9" id="kakashi">9</td>
+                        <td class="button-designs lc" data-value="*">*</td>
+                    </tr>
+                    <tr>
+                        <td class="button-designs" data-value="4" id="mightguy">4</td>
+                        <td class="button-designs" data-value="5" id="gaara">5</td>
+                        <td class="button-designs" data-value="6" id="rocklee">6</td>
+                        <td class="button-designs lc" data-value="-" data-value="-">-</td>
+                    </tr>
+                    <tr>
+                        <td class="button-designs" data-value="1" id="hasirama">1</td>
+                        <td class="button-designs" data-value="2" id="jiraya">2</td>
+                        <td class="button-designs" data-value="3" id="madara">3</td>
+                        <td class="button-designs lc" data-value="+">+</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="button-designs" data-value="0" id="sasukenaruto">0</td>
+                        <td class="button-designs" data-value="." data-value="." id="sakura">.</td>
+                        <td class="button-designs lc" data-value="=">=</td>
+                    </tr>
+                </table>
+                <div><h3>Site Designed By Yuvaraja</h3></div>
+                <div id="cp">Copyright © 2022 - 2023 TrendSetters Enterprise. All rights reserved.</div>
+            </div>
         <script src="index.js"></script>
     </body>
 </html>
